--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <body>
     <header>
       <h1>BrandName</h1>
+      <nav>
+        <a href="index.html">Home</a>
+        <a href="#">Product</a>
+        <a href="#">Pricing</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
   </body>
 </html>
