This commit will add  login and signup links

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="#">Pricing</a>
         <a href="#">Contact</a>
       </nav>
+      <p>Login</p>
+      <Button>Become a member</Button>
     </header>
   </body>
 </html>
