This commit will add a login link

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <a href="#">Pricing</a>
         <a href="#">Contact</a>
       </nav>
-      <p>Login</p>
+      <p><a href="index.html">Login</a></p>
       <Button>Become a member</Button>
     </header>
+    
   </body>
 </html>
