This commit will add another heading and paragraph

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
       <p><a href="index.html">Login</a></p>
       <Button>Become a member</Button>
     </header>
-    
+    <div>
+      <h1>We Ensure A Best Insurance Service </h1>
+      <p><span>We know how large objects will act, but things on a</span></p>
+      <p><span>small scale just do not act that way</span></p>
+    </div>
+    <div>
+      <button></button>
+    </div>
   </body>
 </html>
