This commit will add two other buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <p><span>small scale just do not act that way</span></p>
     </div>
     <div>
-      <button></button>
+      <button>Get Quote</button>
+      <button>Learn More</button>
     </div>
   </body>
 </html>
