It  will add classes to the first section of body

--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
   </head>
   <body>
     <header>
-      <h1>BrandName</h1>
-      <nav>
+      <h1 class="name">BrandName</h1>
+      <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="#">Product</a>
         <a href="#">Pricing</a>
         <a href="#">Contact</a>
       </nav>
-      <p><a href="index.html">Login</a></p>
-      <Button>Become a member</Button>
+      <p class="login"><a href="index.html">Login</a></p>
+      <Button class="signup">Become a member</Button>
     </header>
-    <div>
-      <h1>We Ensure A Best Insurance Service </h1>
+    <div class="first">
+    <div class="best">
+      <h1>
+      <span>We Ensure A Best</span>
+      <span>Insurance Service</span>
+      </h1>
+      <div>
       <p><span>We know how large objects will act, but things on a</span></p>
       <p><span>small scale just do not act that way</span></p>
+      </div>
     </div>
-    <div>
+    <div class="buttons">
       <button>Get Quote</button>
       <button>Learn More</button>
     </div>
+   </div>
   </body>
 </html>
