Added an image as a people logo

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div class="first">
     <div class="best">
-      <h1>
+      <h1 class="heading1">
       <span>We Ensure A Best</span>
       <span>Insurance Service</span>
       </h1>
@@ -32,6 +32,14 @@
       <button>Get Quote</button>
       <button>Learn More</button>
     </div>
+   </div>
+   <div class="service1">
+    <div class="iconppl">
+      <img src="2bpl.png" height="10px">
+    </div>
+    <h2>Peace of mind</h2>
+    <p><span></span> the quick fox jumps over the</p>
+    <p><span>lazy dog</span></p>
    </div>
   </body>
 </html>
