--- a/index.html
+++ b/index.html
@@ -33,13 +33,33 @@
       <button>Learn More</button>
     </div>
    </div>
+ <div class="services">
    <div class="service1">
-    <div class="iconppl">
-      <img src="2bpl.png" height="10px">
-    </div>
-    <h2>Peace of mind</h2>
+    <div class="iconppl"><img src="2bpl.png" height="35"></div>
+    <h2>Peace of Mind</h2>
     <p><span></span> the quick fox jumps over the</p>
     <p><span>lazy dog</span></p>
    </div>
+   <div class="service2">
+     <div class="iconppl"><img src="2bpl.png" height="35"></div>
+     <h2>Set For Life</h2>
+     <p><span></span> the quick fox jumps over the</p>
+    <p><span>lazy dog</span></p>
+   </div>
+   <div class="service3">
+    <div class="iconppl"><img src="2bpl.png" height="35"></div>
+    <h2>100% Satisfaction</h2>
+     <p><span></span> the quick fox jumps over the</p>
+    <p><span>lazy dog</span></p>
+   </div>
+ </div>
+ <div class="level1">
+  <div><img src="book.jpeg" height="50"></div>
+  <h3>Peace of Mind</h3>
+  <p>So it really behaves like neither. Now we have given up.</p>
+ </div>
+ <div>
+   <div><img src="bookmark.png" height="50"></div>
+ </div>
   </body>
 </html>
