--- a/index.html
+++ b/index.html
@@ -58,8 +58,15 @@
   <h3>Peace of Mind</h3>
   <p>So it really behaves like neither. Now we have given up.</p>
  </div>
- <div>
+ <div class="level2">
    <div><img src="bookmark.png" height="50"></div>
+   <h3>Set For Life</h3>
+   <p>They were used to create the machines that were launched</p>
+ </div>
+ <div class="level3">
+   <div><img src="2bpl.png" height="50"></div>
+   <h3>100% Satisfaction</h3>
+   <p>So it really behaves like neither. Now we have given up.</p>
  </div>
   </body>
 </html>
