Added another paragrapgh

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <p><span>lazy dog</span></p>
    </div>
  </div>
+ <div class="levels">
  <div class="level1">
   <div><img src="book.jpeg" height="50"></div>
   <h3>Peace of Mind</h3>
@@ -68,5 +69,12 @@
    <h3>100% Satisfaction</h3>
    <p>So it really behaves like neither. Now we have given up.</p>
  </div>
+</div>
+<div class="industry">
+  <h2>Industry</h2>
+  <p>
+    Problems trying to resolve the conflict between the two major realms of Classical Physics. Newtonian Mechanics.
+  </p>
+</div>
   </body>
 </html>
