--- a/index.html
+++ b/index.html
@@ -76,5 +76,10 @@
     Problems trying to resolve the conflict between the two major realms of Classical Physics. Newtonian Mechanics.
   </p>
 </div>
+<div>
+  <div>
+    <img src="#user.1.png">
+  </div>
+</div>
   </body>
 </html>
