--- a/index.html
+++ b/index.html
@@ -76,9 +76,20 @@
     Problems trying to resolve the conflict between the two major realms of Classical Physics. Newtonian Mechanics.
   </p>
 </div>
-<div>
-  <div>
-    <img src="#user.1.png">
+<div class="users">
+  <div class="user1">
+    <img src="user1.png">
+    <p>
+      Slate helps you see how many more days you need to work to reach your financial goal for the month and year
+    </p>
+    <img src="4star.png" height="30">
+  </div>
+  <div class="user2">
+    <img src="user2.png">
+    <p>
+      Slate helps you see how many more days you need to work to reach your financial goal for the month and year
+    </p>
+    <img src="4star.png" height="30">
   </div>
 </div>
   </body>
