Added the 3rd user details

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
     </p>
     <img src="4star.png" height="30">
   </div>
+  <div class="user3">
+    <img src="user3">
+    <p>
+      Slate helps you see how many more days you need to work to reach your financial goal for the month and year
+    </p>
+    <img src="4star.png" height="30">
+  </div>
 </div>
   </body>
 </html>
