--- a/index.html
+++ b/index.html
@@ -99,5 +99,14 @@
     <img src="4star.png" height="30">
   </div>
 </div>
+<div class="logos">
+<img src="Vector.png">
+<img src="Vector-1.png">
+<img src="Vector-2.png">
+<img src="Vector-3.png">
+<img src="Vector-4.png">
+<img src="Vector-5.png">
+
+</div>
   </body>
 </html>
