Added a input tag for email subscription

--- a/index.html
+++ b/index.html
@@ -106,7 +106,20 @@
 <img src="Vector-3.png">
 <img src="Vector-4.png">
 <img src="Vector-5.png">
-
 </div>
+<div class="news">
+  <h3>Subscribe For Latest Newsletter</h3>
+  <div>
+  <input type="email" class="input" placeholder="Your Email">
+  <button class="subscribe">Subscribe</button>
+  </div>
+</div>
+  <div class="pricing">
+    <h2>Pricing</h2>
+    <p>Problems trying to resolve the conflict between the two major realms of Classical physics. Newtonian mechanics</p>
+  </div>
+  <div class="options">
+
+  </div>
   </body>
 </html>
