Added an image in the booking div

--- a/index.html
+++ b/index.html
@@ -134,7 +134,13 @@
       <p><span>do behave, produced an increasing confusion which was</span></p>
       <p><span>Heisenberge, and Born.</span></p>
     </div>
-    
+    <img src="pngwing 1.png">
+  </div>
+  <div class="booking">
+    <div class="contact-cover"><img src="contact-cover2.png"></div>
+    <div class="appointments">
+      
+    </div>
   </div>
   </body>
 </html>
