Added superscript and subscript texts

--- a/index.html
+++ b/index.html
@@ -122,7 +122,9 @@
     <div class="free">
       <h3>FREE</h3>
       <p>Organize access all apps by hand</p>
-      <p>0</p>
+      <p>0 <sup>$</sup>
+        <sub>PER MONTH</sub>
+      </p>
     </div>
   </div>
   <div class="branches">
@@ -139,7 +141,7 @@
   <div class="booking">
     <div class="contact-cover"><img src="contact-cover2.png"></div>
     <div class="appointments">
-      
+
     </div>
   </div>
   </body>
