Added green tick icons to ul

--- a/index.html
+++ b/index.html
@@ -122,9 +122,15 @@
     <div class="free">
       <h3>FREE</h3>
       <p>Organize access all apps by hand</p>
-      <p>0 <sup>$</sup>
+      <p class="dollar">0 <sup>$</sup>
         <sub>PER MONTH</sub>
       </p>
+      <ul>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="" alt=""></li>
+      </ul>
     </div>
   </div>
   <div class="branches">
