Added greytick logo to ul

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
         <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
         <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
         <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
-        <li><img src="" alt=""></li>
+        <li><img src="grey.jpeg" height="20">1GB Cloud storage</li>
+        <li><img src="grey.jpeg" height="20">Email and community support</li>
       </ul>
     </div>
   </div>
