Added a free trial button

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <h2>Pricing</h2>
     <p>Problems trying to resolve the conflict between the two major realms of Classical physics. Newtonian mechanics</p>
   </div>
-  <div class="fsp">
+  <div class="FSP">
     <div class="free">
       <h3>FREE</h3>
       <p>Organize access all apps by hand</p>
@@ -132,6 +132,7 @@
         <li><img src="grey.jpeg" height="20">1GB Cloud storage</li>
         <li><img src="grey.jpeg" height="20">Email and community support</li>
       </ul>
+      <button class="freetrial">Try for free</button>
     </div>
   </div>
   <div class="branches">
