Added standard and premium details

--- a/index.html
+++ b/index.html
@@ -134,6 +134,37 @@
       </ul>
       <button class="freetrial">Try for free</button>
     </div>
+    <div class="standard">
+      <h3>STANDARD</h3>
+      <p>Organize access all apps by hand</p>
+      <p class="dollar">9.99<sup>$</sup>
+        <sub>PER MONTH</sub>
+      </p>
+      <ul>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="grey.jpeg" height="20">1GB Cloud storage</li>
+        <li><img src="grey.jpeg" height="20">Email and community support</li>
+      </ul>
+      <button class="freetrial">Try for free</button>
+    </div>
+    <div class="free">
+      <h3>PREMIUM</h3>
+      <p>Organize access all apps by hand</p>
+      <p class="dollar">19.99<sup>$</sup>
+        <sub>PER MONTH</sub>
+      </p>
+      <ul>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="greentick.jpeg" height="20">Unlimited product updates</li>
+        <li><img src="grey.jpeg" height="20">1GB Cloud storage</li>
+        <li><img src="grey.jpeg" height="20">Email and community support</li>
+      </ul>
+      <button class="freetrial">Try for free</button>
+    </div>
+    
   </div>
   <div class="branches">
     <div class="par">
