--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </ul>
       <button class="freetrial">Try for free</button>
     </div>
-    <div class="free">
+    <div class="premium">
       <h3>PREMIUM</h3>
       <p>Organize access all apps by hand</p>
       <p class="dollar">19.99<sup>$</sup>
@@ -164,7 +164,6 @@
       </ul>
       <button class="freetrial">Try for free</button>
     </div>
-    
   </div>
   <div class="branches">
     <div class="par">
@@ -180,7 +179,9 @@
   <div class="booking">
     <div class="contact-cover"><img src="contact-cover2.png"></div>
     <div class="appointments">
-
+      <h2 class="form">Book Appointment</h2>
+      <h3>Name*</h3>
+      <input type="text" placeholder="Fullname*">
     </div>
   </div>
   </body>
