Added input tags for booking form

--- a/index.html
+++ b/index.html
@@ -181,7 +181,13 @@
     <div class="appointments">
       <h2 class="form">Book Appointment</h2>
       <h3>Name*</h3>
-      <input type="text" placeholder="Fullname*">
+      <input type="text" class="input" placeholder="Fullname*">
+      <h3>Email address*</h3>
+      <input type="text" class="input" placeholder="example@gmail.com">
+      <h3>Department</h3>
+      <select><option value="Please select"></option></select>
+      <h3>Time*</h3>
+      <select><option value="4:00 Available"></option></select>
     </div>
   </div>
   </body>
