Added a consult text and contact button

--- a/index.html
+++ b/index.html
@@ -185,10 +185,20 @@
       <h3>Email address*</h3>
       <input type="text" class="input" placeholder="example@gmail.com">
       <h3>Department</h3>
-      <select><option value="Please select"></option></select>
+      <select class="input"><option value="select">Please select</option></select>
       <h3>Time*</h3>
-      <select><option value="4:00 Available"></option></select>
+      <select class="input"><option value="time">4:00 Available</option></select>
     </div>
+  </div>
+  <div class="consult">
+    <div>
+      <h4>Consulting Agency For Your Business</h4>
+      <p>the quick fox jumps over the lazy dog</p>
+    </div>
+    <button class="contact">Contact Us</button>
+  </div>
+  <div class="credits">
+
   </div>
   </body>
 </html>
