Added company general info and contacts

--- a/index.html
+++ b/index.html
@@ -198,7 +198,50 @@
     <button class="contact">Contact Us</button>
   </div>
   <div class="credits">
-
+    <div class="info">
+      <h4>Company Info</h4>
+      <ul>
+        <li>About Us</li>
+        <li>Carrier</li>
+        <li>We are hiring</li>
+        <li>Blog</li>
+      </ul>
+    </div>
+    <div class="legal">
+      <h4>Legal</h4>
+      <ul>
+        <li>About Us</li>
+        <li>Carrier</li>
+        <li>We are hiring</li>
+        <li>Blog</li>
+      </ul>
+    </div>
+    <div class="features">
+      <h4>Features</h4>
+      <ul>
+        <li>Business Marketing</li>
+        <li>User Analytic</li>
+        <li>Live Chat</li>
+        <li>Unlimited Support</li>
+      </ul>
+    </div>
+    <div class="resources">
+      <h4>Resources</h4>
+      <ul>
+        <li>iOS & Android</li>
+        <li>Watch a Demo</li>
+        <li>Customers</li>
+        <li>API</li>
+      </ul>
+    </div>
+    <div class="findus">
+      <h4>Get In Touch</h4>
+      <ul>
+        <li>(480) 555-0103</li>
+        <li>4517 Washington Ave.</li>
+        <li>debra.holt@example.com</li>
+      </ul>
+    </div>
   </div>
   </body>
 </html>
