Added telephone logo

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
     <div class="findus">
       <h4>Get In Touch</h4>
       <ul>
-        <li>(480) 555-0103</li>
-        <li>4517 Washington Ave.</li>
+        <li><img src="phone.jpeg" height="20">(480) 555-0103</li>
+        <li><img src="" height="20"> 4517 Washington Ave.</li>
         <li>debra.holt@example.com</li>
       </ul>
     </div>
