--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <h4>Get In Touch</h4>
       <ul>
         <li><img src="phone.jpeg" height="20">(480) 555-0103</li>
-        <li><img src="" height="20"> 4517 Washington Ave.</li>
+        <li><img src="location.jpeg" height="20"> 4517 Washington Ave.</li>
         <li>debra.holt@example.com</li>
       </ul>
     </div>
