Added an acknowledgement footer

--- a/index.html
+++ b/index.html
@@ -243,5 +243,9 @@
       </ul>
     </div>
   </div>
+  <footer>
+    <p>Made with Love By Moses Karani. All rights reserved</p>
+    
+  </footer>
   </body>
 </html>
