Added social media icons in footer

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   </div>
   <footer>
     <p>Made with Love By Moses Karani. All rights reserved</p>
-    
+    <img src="media.png" height="30">
   </footer>
   </body>
 </html>
