--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <header>
+    <div class="look">
+    <div class="header">
       <h1 class="name">BrandName</h1>
       <nav class="navbar">
         <a href="index.html">Home</a>
@@ -17,14 +18,14 @@
       </nav>
       <p class="login"><a href="index.html">Login</a></p>
       <Button class="signup">Become a member</Button>
-    </header>
+    </div>
     <div class="first">
     <div class="best">
       <h1 class="heading1">
       <span>We Ensure A Best</span>
       <span>Insurance Service</span>
       </h1>
-      <div>
+      <div class="text">
       <p><span>We know how large objects will act, but things on a</span></p>
       <p><span>small scale just do not act that way</span></p>
       </div>
@@ -34,6 +35,7 @@
       <button>Learn More</button>
     </div>
    </div>
+  </div>
  <div class="services">
    <div class="service1">
     <div class="iconppl"><img src="2bpl.png" height="35"></div>
