It will add classes in the div with class buttons

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       </div>
     </div>
     <div class="buttons">
-      <button>Get Quote</button>
-      <button>Learn More</button>
+      <button class="quote">Get Quote</button>
+      <button class="learn">Learn More</button>
     </div>
    </div>
   </div>
