Added another people icon

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
   </div>
  <div class="services">
    <div class="service1">
-    <div class="iconppl"><img src="2bpl.png" height="35"></div>
+    <div class="iconppl"><img src="people.png" height="35"></div>
     <h2>Peace of Mind</h2>
     <p><span></span> the quick fox jumps over the</p>
     <p><span>lazy dog</span></p>
    </div>
    <div class="service2">
-     <div class="iconppl"><img src="2bpl.png" height="35"></div>
+     <div class="iconppl"><img src="people.png" height="35"></div>
      <h2>Set For Life</h2>
      <p><span></span> the quick fox jumps over the</p>
     <p><span>lazy dog</span></p>
    </div>
    <div class="service3">
-    <div class="iconppl"><img src="2bpl.png" height="35"></div>
+    <div class="iconppl"><img src="people.png" height="35"></div>
     <h2>100% Satisfaction</h2>
      <p><span></span> the quick fox jumps over the</p>
     <p><span>lazy dog</span></p>
