Addedd more logos

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p><span>lazy dog</span></p>
    </div>
    <div class="service3">
-    <div class="iconppl"><img src="people.png" height="35"></div>
+    <div class="iconppl"><img src="user.png" height="35"></div>
     <h2>100% Satisfaction</h2>
      <p><span></span> the quick fox jumps over the</p>
     <p><span>lazy dog</span></p>
@@ -58,7 +58,7 @@
  </div>
  <div class="levels">
  <div class="level1">
-  <div><img src="book.jpeg" height="50"></div>
+  <div><img src="book.png" height="50"></div>
   <h3>Peace of Mind</h3>
   <p>So it really behaves like neither. Now we have given up.</p>
  </div>
@@ -68,7 +68,7 @@
    <p>They were used to create the machines that were launched</p>
  </div>
  <div class="level3">
-   <div><img src="2bpl.png" height="50"></div>
+   <div><img src="people.png" height="50"></div>
    <h3>100% Satisfaction</h3>
    <p>So it really behaves like neither. Now we have given up.</p>
  </div>
