Adds a class and more styles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div>
 <div class="users">
   <div class="user1">
-    <img src="user1.png">
+    <img class="lady1" src="user1.png">
     <p>
       Slate helps you see how many more days you need to work to reach your financial goal for the month and year
     </p>
