Adds a slate class

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="users">
   <div class="user1">
     <img class="lady1" src="user1.png">
-    <p>
+    <p class="slate">
       Slate helps you see how many more days you need to work to reach your financial goal for the month and year
     </p>
     <img src="4star.png" height="30">
