WIll add a background color and do more styles

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
       <p><span>do behave, produced an increasing confusion which was</span></p>
       <p><span>Heisenberge, and Born.</span></p>
     </div>
-    <img src="pngwing 1.png">
+    <img class="worldmap" src="pngwing 1.png">
   </div>
   <div class="booking">
-    <div class="contact-cover"><img src="contact-cover2.png"></div>
+    <div class="contact-cover"><img class="family" src="contact-cover2.png"></div>
     <div class="appointments">
       <h2 class="form">Book Appointment</h2>
       <h3>Name*</h3>
@@ -196,13 +196,14 @@
       <h3>Email address*</h3>
       <input type="text" class="input" placeholder="example@gmail.com">
       <h3>Department</h3>
-      <select class="input"><option value="select">Please select</option></select>
+      <select class="value"><option value="select">Please select</option></select>
       <h3>Time*</h3>
-      <select class="input"><option value="time">4:00 Available</option></select>
+      <select class="value"><option value="time">4:00 Available</option></select>
+      <Button class="BA">Book Appointment</Button>
     </div>
-  </div>
+ </div>
   <div class="consult">
-    <div>
+    <div class="agency">
       <h4>Consulting Agency For Your Business</h4>
       <p>the quick fox jumps over the lazy dog</p>
     </div>
