Will push two divs in the correct -margin

--- a/index.html
+++ b/index.html
@@ -211,13 +211,15 @@
   </div>
   <div class="credits">
     <div class="info">
-      <h4>Company Info</h4>
+      <h4 class="last">Company Info</h>
+      <div>
       <ul>
         <li>About Us</li>
         <li>Carrier</li>
         <li>We are hiring</li>
         <li>Blog</li>
       </ul>
+    </div>
     </div>
     <div class="legal">
       <h4>Legal</h4>
@@ -255,7 +257,7 @@
       </ul>
     </div>
   </div>
-  <footer>
+  <footer class="byme">
     <p>Made with Love By Moses Karani. All rights reserved</p>
     <img src="media.png" height="55">
   </footer>
