--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <div class="look">
     <div class="header">
       <h1 class="name">BrandName</h1>
+      <div class="navbox">
       <nav class="navbar">
         <a href="index.html">Home</a>
         <a href="#">Product</a>
         <a href="#">Pricing</a>
         <a href="#">Contact</a>
       </nav>
+      </div>
       <p class="login"><a href="index.html">Login</a></p>
      <div class="signup">
       <Button>Become a member</Button>
@@ -212,7 +214,7 @@
   <div class="credits">
     <div class="info">
       <h4 class="last">Company Info</h>
-      <div>
+      <div class="list">
       <ul>
         <li>About Us</li>
         <li>Carrier</li>
@@ -222,7 +224,7 @@
     </div>
     </div>
     <div class="legal">
-      <h4>Legal</h4>
+      <h4 class="last">Legal</h4>
       <ul>
         <li>About Us</li>
         <li>Carrier</li>
@@ -231,7 +233,7 @@
       </ul>
     </div>
     <div class="features">
-      <h4>Features</h4>
+      <h4 class="last">Features</h4>
       <ul>
         <li>Business Marketing</li>
         <li>User Analytic</li>
@@ -240,7 +242,7 @@
       </ul>
     </div>
     <div class="resources">
-      <h4>Resources</h4>
+      <h4 class="last">Resources</h4>
       <ul>
         <li>iOS & Android</li>
         <li>Watch a Demo</li>
@@ -249,7 +251,7 @@
       </ul>
     </div>
     <div class="findus">
-      <h4>Get In Touch</h4>
+      <h4 class="last">Get In Touch</h4>
       <ul>
         <li><img src="phone.jpeg" height="20">(480) 555-0103</li>
         <li><img src="location.jpeg" height="20">4517 Washington Ave.</li>
