Will change the name to Cisco-Insurance

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="look">
     <div class="header">
-      <h1 class="name">BrandName</h1>
+      <h1 class="name">Cisco-Insurance</h1>
       <div class="navbox">
       <nav class="navbar">
         <a href="index.html">Home</a>
