--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
   <button class="subscribe">Subscribe</button>
   </form>
 </div>
+<div class="all-pricing">
   <div class="subtitle">
     <h2>Pricing</h2>
     <p>Problems trying to resolve the conflict between the two major realms of Classical physics. Newtonian mechanics</p>
   </div>
+  
   <div class="FSP">
     <div class="PREFS">
       <div class="trials">
@@ -178,6 +180,7 @@
       <button class="freetrial">Try for free</button>
     </div>
   </div>
+</div>
   <div class="branches">
     <div class="par">
       <h2>We Have Branches All Over The World</h2>
